# PSS-Fleet-Helper

./: .gitignore  Dockerfile  Makefile  README.md  docker.env  main.py  pyproject.toml  requirements.txt  test.py
src/: about.py  app_settings.py  bot.py  bot_settings.py  checks.py  confirmator.py  database.py  embed.py  init.py  main.py  reaction_role.py  reactionroles.py  roles.py  selector.py  vivibot.py  vm_converter.py
src/cogs/: __init__.py  about.py  chatlog.py  chatlogger.py  checks.py  cog_base.py  embed.py  fleet.py  reactionroles.py  rolemanagement.py  roles.py  utility.py
src/converters/: __init__.py  psschatlog.py  reactionrole.py
src/model/: __init__.py  baseorm.py  chat_log.py  config.py  database.py  errors.py  fleet.py  model_settings.py  orm.py  pssapi_discord_bot.py  reaction_role.py  settings.py  setup.py  vivibot.py
src/model/utils/: __init__.py  discord.py
src/pssapi/: __init__.py  alliance_service.py  convert.py  core.py  data.py  entities.py  enums.py  errors.py  erros.py  login.py  message_service.py  raw_entities.py  settings.py  types.py  user_service.py  utils.py
src/tests/: reaction_roles.py
src/utils/: __init__.py  assert_.py  confirmator.py  database.py  datetime.py  discord.py  format.py  json.py  miscellaneous.py  parse.py  selector.py  settings.py  web.py
testdata/: embed_def.json
