[project]
name = "pss-fleet-helper"
version = "0.8.0"
description = "A bot assisting in Discord management."
authors = [
    { name = "The worst.", email = "theworstpss@gmail.com" }
]
dependencies = [
    "psycopg2-binary>=2.9.9",
    "py-cord>=2.5.0",
    "pssapi>=0.5.1",
    "emoji>=2.12.1",
    "sqlalchemy==1.4.47",
    "asyncpg==0.27.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "autoflake>=2.3.1",
    "autopep8>=2.2.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.4.26",
    "flake8-black>=0.3.6",
    "black>=24.4.2",
    "isort>=5.13.2",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.21.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.1",
    "pytest-cov>=4.1.0",]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pss_fleet_helper"]
